Ajsutes Swagger
